--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,9 +4,11 @@
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
-    "hono": "^4.4.9"
+    "hono": "^4.4.9",
+    "pg": "^8.12.0"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/pg": "^8.11.6"
   }
 }
