--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,6 +4,7 @@
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.2.2",
     "hono": "^4.4.9",
     "pg": "^8.12.0"
   },
