feat(api): add small tests

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@lepaya/api",
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "dev": "bun run --hot src/index.ts",
+    "test": "bun test"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.2.2",
